--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,10 @@ jobs:
     steps:
       - name: print a welcome message
         run: echo "welcome to our first github actions workflow!"
+
+      - name: checkout repository
+        uses: actions/checkout@v4.3.1
+
+      - name: list repository files
+        run: ls -la
+      
