add the test woekflow

--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
       - "release/**"
-    patths:
+    paths:
       - 'src/**'
       - 'docs/**'
       - '.github/workflows/push-pr.yml'
